[metadata]
name = napari
url = https://napari.org
download_url = https://github.com/napari/napari
license = BSD 3-Clause
license_file = LICENSE
description = n-dimensional array viewer in Python
long_description = file: README.md
long_description_content_type = text/markdown
author = napari team
author_email = napari-steering-council@googlegroups.com
project_urls =
    Bug Tracker = https://github.com/napari/napari/issues
    Documentation = https://napari.org
    Source Code = https://github.com/napari/napari
classifiers =
    Development Status :: 3 - Alpha
    Environment :: X11 Applications :: Qt
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: C
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Visualization
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Utilities
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: MacOS


[options]
zip_safe = False
packages = find:
python_requires = >=3.8
include_package_data = True
install_requires =
    appdirs>=1.4.4
    app-model>=0.1.0,<0.3.0  # as per @czaki request. app-model v0.3.0 can drop napari v0.4.17
    cachey>=0.2.1
    certifi>=2018.1.18
    dask[array]>=2.15.0,!=2.28.0  # https://github.com/napari/napari/issues/1656
    imageio>=2.5.0,!=2.11.0,!=2.22.1
    jsonschema>=3.2.0
    magicgui>=0.3.6
    napari-console>=0.0.6
    napari-plugin-engine>=0.1.9
    napari-svg>=0.1.6
    npe2>=0.5.2
    numpy>=1.20
    numpydoc>=0.9.2
    pandas>=1.1.0 ; python_version < '3.9'
    pandas>=1.3.0 ; python_version >= '3.9'
    Pillow!=7.1.0,!=7.1.1  # not a direct dependency, but 7.1.0 and 7.1.1 broke imageio
    pint>=0.17
    psutil>=5.0
    psygnal>=0.3.4
    pydantic>=1.9.0
    pygments>=2.6.0
    PyOpenGL>=3.1.0
    PyYAML>=5.1
    qtpy>=1.10.0
    scikit-image[data]>=0.19.1 # just `pooch`, but needed by `builtins` to provide all scikit-image.data samples
    scipy>=1.4.1 ; python_version < '3.9'
    scipy>=1.5.4 ; python_version >= '3.9'
    sphinx>=4.3.0,<5  # numpydoc dependency. sphinx>=5 breaks the docs build; see https://github.com/napari/napari/pull/4915
    superqt>=0.3.0
    tifffile>=2020.2.16
    toolz>=0.10.0
    tqdm>=4.56.0
    typing_extensions
    vispy>=0.12.1,<0.13
    wrapt>=1.11.1

[options.package_data]
* = *.pyi
napari_builtins =
    builtins.yaml

# for explanation of %(extra)s syntax see:
# https://github.com/pypa/setuptools/issues/1260#issuecomment-438187625
# this syntax may change in the future

[options.extras_require]
pyside2 =
    PySide2>=5.13.2,!=5.15.0 ; python_version != '3.8'
    PySide2>=5.14.2,!=5.15.0 ; python_version == '3.8'
pyside =  # alias for pyside2
    %(pyside2)s
pyqt5 =
    PyQt5>=5.12.3,!=5.15.0
pyqt =  # alias for pyqt5
    %(pyqt5)s
qt =  # alias for pyqt5
    %(pyqt5)s
# all is the full "batteries included" extra.
all =
    %(pyqt5)s
# optional (i.e. opt-in) packages, see https://github.com/napari/napari/pull/3867#discussion_r864354854
optional =
    triangle
testing =
    babel>=2.9.0
    fsspec
    hypothesis>=6.8.0
    lxml
    matplotlib
    pooch>=1.6.0
    pytest-cov
    pytest-qt
    pytest-pretty>=1.1.0
    pytest>=7.0.0
    tensorstore>=0.1.13
    torch>=1.7
    virtualenv
    xarray>=0.16.2
    zarr>=2.12.0
    IPython>=7.25.0
    qtconsole>=4.5.1
    rich>=12.0.0
    napari-plugin-manager @ https://github.com/napari/napari-plugin-manager/archive/main.tar.gz
release = 
    PyGithub>=1.44.1
    twine>=3.1.1
    gitpython>=3.1.0
    requests-cache>=0.9.2
dev =
    black
    check-manifest>=0.42
    pre-commit>=2.9.0
    pydantic[dotenv]
    rich
    %(testing)s
build =
    black
    ruff
    pyqt5
bundle_build =
    briefcase==0.3.1
    dmgbuild>=1.4.2
    markupsafe<2.1
    PySide2==5.15.2
    ruamel.yaml
    tomlkit
    wheel
bundle_run =
    imagecodecs
    pip
    PySide2==5.15.2
    scikit-image[data]
    zarr
    wheel
    pims
    numpy==1.19.3
    napari-plugin-manager @ https://github.com/napari/napari-plugin-manager/archive/main.tar.gz

[options.entry_points]
console_scripts =
    napari = napari.__main__:main
pytest11 =
    napari = napari.utils._testsupport
napari.manifest =
    napari_builtins = napari_builtins:builtins.yaml


[coverage:report]
exclude_lines =
    pragma: no cover
    if TYPE_CHECKING:
    raise NotImplementedError()
    except ImportError:


[coverage:run]
omit =
    */_vendor/*

[importlinter]
root_package = napari
include_external_packages=True


[importlinter:contract:1]
name = "Forbid import PyQt and PySide"
type = forbidden
source_modules =
    napari
forbidden_modules =
    PyQt5
    PySide2
ignore_imports =
    napari._qt.qt_resources._icons -> PyQt5
    napari._qt.qt_resources._icons -> PySide2
    napari._qt -> PySide2


[importlinter:contract:2]
name = "Block import from qt module in abstract ones"
type = layers
layers=
    napari.qt
    napari.layers

[importlinter:contract:3]
name = "Block import from qt module in abstract ones"
type = layers
layers=
    napari.qt
    napari.components
